sdsc hang